--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'montserrat', sans-serif;
-    background-image: url('../img/image.jpeg');
+    background-image: url('../img/image.jpg');
     background-size: cover;
     background-position: top center;
 }
